Implemented feed on home page including like/unlike, comment and reply. Updated the bible-service.js. Added translation parsing and support for including translation in bible text.
Created directive for feed(wall posts) and comment.

Added privacy option to sermon as well as summary.

Added title e.g Pastor to user object

Added translation support to scripture display modal

--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -193,6 +193,7 @@
 <script src="module/component/helper-directives/directives.js"></script>
 <script src="module/component/helper-filters/filters.js"></script>
 <script src="module/component/feed/feed-directive.js"></script>
+<!--<script src="module/component/comment/comment-directive.js"></script>-->
 <script src="module/component/bible/bible-data.js"></script>
 <script src="module/component/bible/bible-service.js"></script>
 <script src="module/component/alert/alert-service.js"></script>
