--- a/app/dev/module/main/signup-profile.html
+++ b/app/dev/module/main/signup-profile.html
@@ -37,7 +37,7 @@
                                                 <div class="form-group">
                                                     <div class="fg-line">
                                                         <div class="select">
-                                                            <select class="form-control">
+                                                            <select class="form-control" ng-model="mainCtrl.user.title">
                                                                 <option value="Archbishop">Archbishop</option>
                                                                 <option value="Apostle">Apostle</option>
                                                                 <option value="Bishop">Bishop</option>
