--- a/app/dev/index.html
+++ b/app/dev/index.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body>
+<body ng-class="{overflow: appCtrl.sideMenu}">
 <script>
     window.fbAsyncInit = function () {
         FB.init({
