--- a/app/dev/module/main/main.html
+++ b/app/dev/module/main/main.html
@@ -1,141 +1,87 @@
+<div ng-class="{'sidebar-mask': appCtrl.sideMenu}" ng-click="appCtrl.sideMenu=false">
+
+</div>
+
+<aside id="sidebar" data-ng-include="'module/main/sidebar-menu.html'"
+       class="menu"
+        ng-class="{toggled: appCtrl.sideMenu}"></aside>
+
+
 <section id="content">
 
+    <div id="top">
+        <div class="header">
+            <div class="fixed-header">
 
-    <div class="container">
 
-        <div id="login-signup-reset">
-            <div class="col-sm-6" style="margin-bottom: 70px">
-                <!--<h2>ScripturedIn</h2>-->
-                <!--login -->
-                <div ng-if="$state.current.name == 'main' || $state.current.name == 'main.login'">
+                <div>
+                    <ul class="header-inner">
 
-                    <div class="lc-block toggled" id="login">
-                        <div class="input-group m-b-20">
-                            <span class="input-group-addon"><i class="zmdi zmdi-account"></i></span>
-
-                            <div class="fg-line">
-                                <input type="text" class="form-control" placeholder="Username">
+                        <li class="menu-trigger" id="menu-trigger" ng-click="appCtrl.sideMenu=true">
+                            <div class="line-wrap">
+                                <div class="line top"></div>
+                                <div class="line center"></div>
+                                <div class="line bottom"></div>
                             </div>
+                        </li>
+
+                        <li class="logo"><a href="">scripturedin</a></li>
+                        <li class="pull-right hidden-xs">
+                            <ul class="top-menu">
+                                <li><a href ng-click="mainCtrl.showSignup()">Sign Up</a></li>
+                                <li><a href ng-click="mainCtrl.showSignup()">Login</a></li>
+                            </ul>
+
+                        </li>
+                    </ul>
+
+                    <div class="header-content">
+                        <div class="intro-text-bg">
+                            <p>Rediscover the Word of God!</p>
                         </div>
-
-                        <div class="input-group m-b-20">
-                            <span class="input-group-addon"><i class="zmdi zmdi-male"></i></span>
-
-                            <div class="fg-line">
-                                <input type="password" class="form-control" placeholder="Password">
-                            </div>
-                        </div>
-
-                        <div class="clearfix"></div>
-
-
-                        <a href="" class="btn btn-login btn-danger btn-float"><i
-                                class="zmdi zmdi-arrow-forward"></i></a>
-
-                        <p class="text-center"> or login with</p>
-                        <ul class="social-login">
-                            <li>
-                                <!--<div class="g-signin2" data-onsuccess="onSignIn"></div>-->
-                                <a href><img src="img/social/googleplus-128.png" alt="Google+ Login"></a>
-
-                            </li>
-                            <li>
-                                <a href ng-click="mainCtrl.fbLogin()">
-                                    <img src="img/social/facebook-128.png" alt="Facebook Login">
-                                </a>
-                            </li>
-                        </ul>
-
-                        <p class="m-t-10 text-center">Not a member? <a ui-sref="main.signup">Join Now</a></p>
                     </div>
                 </div>
-                <div ng-if="$state.current.name == 'main.signup'"
-                     class="lc-block toggled" id="sign-up">
-                    <h2 style="margin-left: 20px; margin-bottom: 30px"> Sign Up for ScripturedIn</h2>
 
-                    <form name="signUpForm" ng-submit="mainCtrl.signUp(signUpForm)" style="padding: 15px">
-                        <div class="input-group m-b-20">
-                            <!--<span class="input-group-addon"><i class="zmdi zmdi-account"></i></span>-->
-
-                            <div class="fg-line">
-                                <label class="control-label" for="firstname">First Name</label>
-                                <input id="firstname" ng-model="mainCtrl.user.first_name" type="text" required
-                                       class="form-control">
-                            </div>
-                        </div>
-                        <div class="input-group m-b-20">
-                            <!--<span class="input-group-addon"><i class="zmdi zmdi-account"></i></span>-->
-
-                            <div class="fg-line">
-                                <label class="control-label" for="lastname">Last Name</label>
-                                <input id="lastname" ng-model="mainCtrl.user.last_name"
-                                       type="text" required class="form-control">
-                            </div>
-                        </div>
-
-                        <div class="input-group m-b-20">
-                            <!--<span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>-->
-
-                            <div class="fg-line">
-                                <label class="control-label" for="email">Email</label>
-                                <input type="email"
-                                       ng-model="mainCtrl.user.email"
-                                       required class="form-control" id="email">
-                            </div>
-                        </div>
-
-                           <div class="input-group m-b-20">
-                            <!--<span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>-->
-
-                            <div class="fg-line">
-                                <label class="control-label" for="email">Password</label>
-                                <input type="password"
-                                       ng-model="mainCtrl.user.password"
-                                       required class="form-control" id="password">
-                            </div>
-                        </div>
-                        <!--<div class="input-group m-b-20">-->
-                            <!--&lt;!&ndash;<span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>&ndash;&gt;-->
-
-                            <!--<div class="fg-line">-->
-                                <!--<label class="control-label" for="email">Password</label>-->
-                                <!--<input type="email"-->
-                                       <!--ng-model="mainCtrl.user.email"-->
-                                       <!--required class="form-control" id="password2">-->
-                            <!--</div>-->
-                        <!--</div>-->
-
-                        <div class="input-group m-b-20" style="width: 100%">
-                            <button class="btn btn-block btn-primary waves-effect">Sign Up</button>
-                        </div>
-
-                        <p class="text-center"> or sign up with</p>
-                        <ul class="social-login">
-                            <li>
-                                <!--<div class="g-signin2" data-onsuccess="onSignIn"></div>-->
-                                <a href><img src="img/social/googleplus-128.png" alt="Google+ Login"></a>
-
-                            </li>
-                            <li>
-                                <a ng-click="mainCtrl.fbLogin('signup')" href>
-                                    <img src="img/social/facebook-128.png" alt="Facebook Login">
-                                </a>
-                            </li>
-                        </ul>
-
-                        <p class="m-t-10 text-center">Already have an account, <a ui-sref="main.login">Sign In</a></p>
-                    </form>
-
-
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <h2>Image and stuff here</h2>
             </div>
 
+        </div>
+    </div>
+
+    <div class="info">
+        <div class="row">
+            <div class="col-sm-4 section">
+                <img src="img/search.png" alt="">
+
+                <h3>Discover life transforming sermons.</h3>
+                <p>Do you remember all your pastor’s sermon last month?
+                    How about last year? We didn’t think so.</p>
+            </div>
+            <div class="col-sm-4 section">
+                <img src="img/note.png" alt="">
+                <h3>Takes notes in a central place.</h3>
+                <p>It's good to take notes. How about keeping them safe, organized and accessible for ever.</p>
+            </div>
+            <div class="col-sm-4 section">
+                <img src="img/social.png" alt="">
+                <h3>Share and gain inspiration.</h3>
+                <p>As iron sharpens iron,
+                    So one person sharpens and influences another through discussion.</p>
+            </div>
         </div>
 
 
     </div>
+
+    <footer id="footer">
+
+        <ul class="f-menu">
+            <li><a href="">About</a></li>
+            <!--<li><a href="">Dashboard</a></li>-->
+            <!--<li><a href="">Reports</a></li>-->
+            <!--<li><a href="">Support</a></li>-->
+            <li><a href="">Contact</a></li>
+        </ul>
+        &copy; 2015 scripturedin
+    </footer>
 
 </section>
