--- a/app/dev/module/main/email-signup-modal.html
+++ b/app/dev/module/main/email-signup-modal.html
@@ -6,48 +6,65 @@
     </div>
 </div>
 <div class="modal-body">
-    <form name="signUpForm" ng-submit="mainCtrl.signUp(signUpForm)" style="padding: 15px">
-        <div class="input-group m-b-20">
+    <div class="m-t-10 alert alert-danger" ng-if="modalCtrl.error">
+        <p ng-bind-html="modalCtrl.error"></p>
+    </div>
+    <form name="signupForm" ng-submit="modalCtrl.signup(signupForm)" style="padding: 15px" novalidate>
+        <div class="input-group m-b-20" ng-class="{'has-error':signupForm.$submitted && signupForm.firstname.$invalid}">
             <!--<span class="input-group-addon"><i class="zmdi zmdi-account"></i></span>-->
 
+            <!--<label class="control-label">Input with error</label>-->
             <div class="fg-line">
-                <input id="firstname" ng-model="mainCtrl.user.first_name" type="text"
-                       required placeholder="First name"
+
+                <input id="firstname"
+                       name="firstname"
+                       ng-model="modalCtrl.user.first_name"
+                       type="text"
+                       required
+                       placeholder="First name"
                        class="form-control">
             </div>
         </div>
-        <div class="input-group m-b-20">
+        <div class="input-group m-b-20" ng-class="{'has-error':signupForm.$submitted && signupForm.lastname.$invalid}">
             <div class="fg-line">
-                <input id="lastname" ng-model="mainCtrl.user.last_name"
+                <input id="lastname"
+                       ng-model="modalCtrl.user.last_name"
+                       name="lastname"
                        placeholder="Last name"
-                       type="text" required class="form-control">
+                       required
+                       type="text"
+                       required
+                       class="form-control">
             </div>
         </div>
 
-        <div class="input-group m-b-20">
-            <!--<span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>-->
-
+        <div class="input-group m-b-20" ng-class="{'has-error':signupForm.$submitted && signupForm.email.$invalid}">
             <div class="fg-line">
                 <input type="email"
+                       name="email"
                        placeholder="Email"
-                       ng-model="mainCtrl.user.email"
-                       required class="form-control" id="email">
+                       ng-model="modalCtrl.user.email"
+                       required class="form-control"
+                       id="email">
             </div>
         </div>
 
-        <div class="input-group m-b-20">
-            <!--<span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>-->
-
+        <div class="input-group m-b-20" ng-class="{'has-error':signupForm.$submitted && signupForm.password.$invalid}">
             <div class="fg-line">
                 <input type="password"
+                       name="password"
                        placeholder="Password"
-                       ng-model="mainCtrl.user.password"
+                       ng-model="modalCtrl.user.password"
+                       pattern=".{6,}"
+                       title="6 characters minimum"
                        required class="form-control" id="password">
+                <small ng-if="signupForm.$submitted && signupForm.password.$invalid"
+                       class="help-block">Password should be at least 6 characters</small>
             </div>
         </div>
 
         <div class="input-group m-b-20" style="width: 100%">
-            <button class="btn btn-block btn-primary waves-effect">Sign Up</button>
+            <button type="submit" class="btn btn-block btn-primary waves-effect">Sign Up</button>
         </div>
 
 
